[workspace]
resolver = "2"
members = [
    "packages/*",
    "contracts/factory",
    "contracts/pair",
    "contracts/pair_stable",
    "contracts/router",
]

exclude = ["packages/palomadex_mocks"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw-utils = "1.0.3"
itertools = "0.13.0"
schemars = "0.8.21"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.64" }
palomadex = { path = "./packages/palomadex" }