[package]
name = "palomadex-factory"
version = "0.1.0"
authors = ["Volume Finance"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
backtraces = ["cosmwasm-std/backtraces"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw20.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
cw-utils.workspace = true
itertools.workspace = true
palomadex = { path = "../../packages/palomadex"}

[dev-dependencies]
cw-multi-test = "1.2.0"
cw20-base = "1.1"
prost = "0.13.3"
anyhow = "1.0"
palomadex-pair = { path = "../pair" }