[package]
name = "palomadex-pair-stable"
version = "0.1.0"
authors = ["Volume Finance"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw20.workspace = true
cw-utils.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
palomadex.workspace = true
itertools.workspace = true
palomadex-circular-buffer = { path = "../../packages/circular_buffer" }

[dev-dependencies]
anyhow = "1.0"
cw-multi-test = "1.2.0"
proptest = "1.0"
prost = "0.13.3"
cw20-base = "1.1.2"
palomadex-factory = { path = "../factory" }
palomadex-native-coin-registry = { path = "../../packages/native_coin_registry" }
basic-stableswap-sim = { path = "../../packages/basic_stableswap_sim"}
derivative = "2.2"
palomadex-mocks ={ path= "../../packages/palomadex_mocks" }