[package]
name = "palomadex-router"
version = "0.1.0"
authors = ["Volume Finance"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
library = []
backtraces = ["cosmwasm-std/backtraces"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[dependencies]
cw20.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
integer-sqrt = "0.1"
palomadex = { path = "../../packages/palomadex"}
thiserror.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
palomadex-factory = { path = "../factory" }
cw20-base = "1.1"
palomadex-pair = { path = "../pair" }
anyhow = "1.0"
cw-multi-test = "1.2.0"
